fix blend mode error on safari

--- a/src/styles/components/Background.css
+++ b/src/styles/components/Background.css
@@ -7,7 +7,6 @@
   position: fixed;
   z-index: -5;
   background-color: #282c34;
-  mix-blend-mode: exclusion;
 }
 
 .fiberCanvas{
